--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,31 @@
 		<version>2.2.5.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
+	<profiles>
+		<profile>
+			<id>build</id>
+			<properties>
+				<version>${version}</version>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+					<version>dev</version>
+			</properties>
+		</profile>
+	</profiles>
+
 	<groupId>fi.tuni.tamk.tiko.bmb</groupId>
-	<artifactId>blog-backend</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>blog</artifactId>
+	<version>${version}</version>
 	<name>blog-backend</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Backend for Blog-Frontend project.</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -58,10 +78,73 @@
 
 	<build>
 		<plugins>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>com.github.eirslett</groupId>
+				<artifactId>frontend-maven-plugin</artifactId>
+				<!-- Check latest released version from
+				https://repo1.maven.org/maven2/com/github/eirslett/frontend-maven-plugin/ -->
+				<version>1.9.1</version>
+				<configuration>
+        			<workingDirectory>../Blog-Frontend</workingDirectory>
+        			<installDirectory>target</installDirectory>
+    			</configuration>
+    			<executions>
+					<execution>
+						<id>install node and npm</id>
+						<goals>
+							<goal>install-node-and-npm</goal>
+						</goals>
+						<configuration>
+							<nodeVersion>v12.16.1</nodeVersion>
+							<npmVersion>6.13.4</npmVersion>
+						</configuration>
+					</execution>
+					<execution>
+						<id>npm install</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<configuration>
+							<arguments>install</arguments>
+						</configuration>
+					</execution>
+					<execution>
+						<id>npm run build</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<configuration>
+							<arguments>run build</arguments>
+						</configuration>
+					</execution>
+				</executions>
+		    </plugin>
+
+			 <plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>generate-resources</phase>
+						<configuration>
+							<target>
+								<copy todir="${project.build.directory}/classes/public">
+									<fileset dir="${project.basedir}/../Blog-Frontend/build"/>
+								</copy>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
